[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/ui/GameUITheme.tres" type="Theme" id=1]
[ext_resource path="res://objects/ui/GameManager.gd" type="Script" id=2]
[ext_resource path="res://objects/ui/overrides/FullScreenUITexture.tres" type="StyleBox" id=3]
[ext_resource path="res://objects/ui/Counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/ui/overrides/pressed_button.svg" type="Texture" id=5]
[ext_resource path="res://objects/ui/overrides/TobBar.svg" type="Texture" id=6]
[ext_resource path="res://objects/ui/overrides/date.svg" type="Texture" id=7]
[ext_resource path="res://objects/ui/overrides/reputation.svg" type="Texture" id=8]
[ext_resource path="res://objects/ui/overrides/money.svg" type="Texture" id=9]
[ext_resource path="res://objects/ui/Map.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/ui/overrides/map.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="GameUI" type="Control" groups=[
"game_ui",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="__FullWindowBox__" type="VBoxContainer" parent="." groups=[
"game_ui",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullWindowPanel" type="Panel" parent="__FullWindowBox__"]
margin_right = 1920.0
margin_bottom = 1048.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="FullWindowBox" type="VBoxContainer" parent="__FullWindowBox__/FullWindowPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox"]
margin_right = 1920.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerLeft" type="VBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer"]
margin_right = 584.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusBar" type="HBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft"]
margin_right = 584.0
margin_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Money" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/StatusBar" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 290.0
margin_bottom = 159.0
theme = ExtResource( 1 )
texture = ExtResource( 9 )

[node name="Reputation" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/StatusBar" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_top = 0.0
margin_right = 584.0
margin_bottom = 159.0
texture = ExtResource( 8 )

[node name="Date" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 163.0
margin_right = 584.0
margin_bottom = 336.0
size_flags_stretch_ratio = 0.54
texture = ExtResource( 7 )

[node name="Map" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 340.0
margin_right = 584.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollFeed" type="Control" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft"]
margin_top = 664.0
margin_right = 584.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBackground" type="TextureRect" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/ScrollFeed"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feed" type="VBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/ScrollFeed"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/ScrollFeed/Feed"]
margin_right = 584.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Лента Событий"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/ScrollFeed/Feed"]
margin_top = 84.0
margin_right = 584.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.91
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerLeft/ScrollFeed/Feed/ScrollContainer"]
margin_right = 584.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerRight" type="VBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer"]
margin_left = 588.0
margin_right = 1920.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.28

[node name="Control" type="Control" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight"]
margin_right = 1332.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faculty" type="TextureButton" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight/Control/HBoxContainer"]
margin_right = 424.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true

[node name="Characters" type="TextureButton" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight/Control/HBoxContainer"]
margin_left = 434.0
margin_right = 858.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true

[node name="Grants" type="TextureButton" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight/Control/HBoxContainer"]
margin_left = 868.0
margin_right = 1292.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true

[node name="GameWindow" type="Control" parent="__FullWindowBox__/FullWindowPanel/FullWindowBox/HBoxContainer/VBoxContainerRight"]
margin_top = 148.0
margin_right = 1332.0
margin_bottom = 984.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.77

[node name="StatusLabelPanel" type="Panel" parent="__FullWindowBox__" groups=[
"game_ui",
]]
margin_top = 1048.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )

[node name="StatusLabelContainer" type="MarginContainer" parent="__FullWindowBox__/StatusLabelPanel" groups=[
"game_ui",
]]
margin_left = 5.0
margin_top = 5.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="__FullWindowBox__/StatusLabelPanel/StatusLabelContainer" groups=[
"debug_ui",
"dynamic_ui",
"game_ui",
]]
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
